fixed banner background overlapping

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -159,7 +159,7 @@ body#body {
                 }
 
                 @media screen and (min-width: 1100px) {
-                    height: 760px;
+                    height: 790px;
                 }
             }
 
@@ -181,7 +181,7 @@ body#body {
                 }
 
                 @media screen and (min-width: 1100px) {
-                    height: 620px;
+                    height: 680px;
                 }
             }
 
@@ -218,7 +218,7 @@ body#body {
                 }
 
                 @media screen and (min-width: 1100px) {
-                    margin-top: -510px;
+                    margin-top: -550px;
                     margin-right: 13%;
                     width: 300px;
                 }
